[gd_scene load_steps=5 format=2]

[ext_resource path="res://MenuMargin.gd" type="Script" id=1]
[ext_resource path="res://Fonts/determinationsansweb-webfont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainMenu" type="Node"]

[node name="MenuMargin" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Pause", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 900.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 250
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "Theme", "custom_constants" ]

[node name="Selectors" type="VBoxContainer" parent="MenuMargin/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 252.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 2
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="NewGameLabel" type="Button" parent="MenuMargin/HBoxContainer/Selectors" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 184.0
margin_right = 252.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="LoadGameLabel" type="Button" parent="MenuMargin/HBoxContainer/Selectors" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 276.0
margin_right = 252.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = true
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="QuitLabel" type="Button" parent="MenuMargin/HBoxContainer/Selectors" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 368.0
margin_right = 252.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = true
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="TextureRect" type="TextureRect" parent="MenuMargin/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 502.0
margin_right = 758.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[connection signal="pressed" from="MenuMargin/HBoxContainer/Selectors/NewGameLabel" to="MenuMargin" method="_on_NewGameLabel_pressed"]

[connection signal="pressed" from="MenuMargin/HBoxContainer/Selectors/LoadGameLabel" to="MenuMargin" method="_on_LoadGameLabel_pressed"]

[connection signal="pressed" from="MenuMargin/HBoxContainer/Selectors/QuitLabel" to="MenuMargin" method="_on_QuitLabel_pressed"]


